[project]
name = "home-assistant-neosmartblinds"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13.2,<4.0"
dependencies = [
    "homeassistant (>=2025.7.4)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
